--- a/index.html
+++ b/index.html
@@ -12,20 +12,20 @@
 			<nav>
 				<h4 class="hero_logo">Header Logo</h4>
 				<ul>
-					<li class="hero_secondary_text">header link one</li>
-					<li class="hero_secondary_text">header link two</li>
-					s
+					<li id="hero_secondary_text">header link one</li>
+					<li id="hero_secondary_text">header link two</li>
+					<li id="hero_secondary_text">header link three</li>
 				</ul>
 			</nav>
 			<section class="header">
 				<div class="header_info">
 					<div class="header_description">
 						<h2 class="hero_main_text">This website is awesome</h2>
-						<p class="hero_secondary_text">
+						<p class="hero_secondary_text hero_description">
 							This website has some subtext that goes here under the main title.
 							It's smaller front and the color is lower contrast.
 						</p>
-						<button>Sign Up</button>
+						<button class="hero_button">Sign Up</button>
 					</div>
 					<div class="image_placeholder">
 						<img src="https://via.placeholder.com/400x150.png/09f/fff" alt="" />
@@ -62,23 +62,31 @@
 				</div>
 			</section>
 			<section class="section_three">
-				<q class="quoute_text">
+				<q class="quoute_text"><em>
 					This is an inspiring quote, or testimonial from a customer. Maybe it's
-					just filling up space, or maybe people will actually read it, WHo
-					knows? All i know ia that it looks nice.
-				</q>
+					just filling up space, or maybe people will actually read it, Who
+					knows? All i know is that it looks nice.
+				</em></q>
 				<p>-Thor, God of Thunder</p>
 			</section>
 			<section class="section_four">
 				<div class="action">
-					<h5>Call to action! It's time!</h5>
-					<p>
+					<div class="action_text">
+						<h5>Call to action! It's time!</h5>
+						<p class="action_text_secondary">
 						Sign ip for our product by clicking that button right over there!
-					</p>
-				</div>
-				<div class="sign_up_button">
+						</p>
+					</div>
+					<div class="sign_up_button">
 					<button>Sign up</button>
+					</div>
 				</div>
+				</div>
+				<footer>
+					<div class="footer_text">
+						<p>Copyright &copy The Odin Project 2021</p>
+					</div>
+				</footer>
 			</section>
 		</div>
 	</body>
