final css changes

--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
 						<button class="hero_button">Sign Up</button>
 					</div>
 					<div class="image_placeholder">
-						<img src="https://via.placeholder.com/400x150.png/09f/fff" alt="" />
+						<!-- <img src="https://via.placeholder.com/468x60" alt="" /> -->
+						<p id="placeholder_text">This is a placeholder for an image</p>
+
 					</div>
 				</div>
 			</section>
